--- a/res/scss/view/_settings-optimisation.scss
+++ b/res/scss/view/_settings-optimisation.scss
@@ -24,6 +24,7 @@
 			}
 			label {
 					width: 30%;
+					max-width: 180px;
 			//		margin: 0 -2px;
 					font-weight: bold;
 					display: inline-block;
@@ -53,8 +54,10 @@
 		{
 			 display: flex;
 			 background-color: #fff;
+			 border-radius: .4rem;
 			 flex-direction: column;
 			 width: 200px;
+			 float: right;
 
 			 h4 { margin: 6px 0; color: #727272; }
 
