--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -21,7 +21,7 @@
   @import 'view/settings-advanced';
   @import 'view/settings-exclusions';
   @import 'view/settings-onboarding';
-
+  @import 'view/settings-integrations';
   @import 'view/settings-tools';
 
 
