--- a/res/scss/elements/_header.scss
+++ b/res/scss/elements/_header.scss
@@ -26,21 +26,20 @@ header
       margin-right: 8px;
       margin-left: 1.1em;
     }
-		.top-buttons
-		{
-			margin-right: 4em;
-			// Items for whole page, including header.
-      a, button
-      {
-         @include shortpixel-button;
-      }
-      .header-button {
-         i {
+    .top-buttons {
+	margin-right: 4em;
+	// Items for whole page, including header.
+      	a, button {
+		@include shortpixel-button;
+      	}
+      	.header-button {
+          i {
             filter: $filter_white;
             margin-right: 4px;
-            height: 25px;
-         }
-      }
-		}
-
+            height: 15px;
+	    width: 15px;
+	    vertical-align: text-top;
+          }
+      	}
+    }
 }
