--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -163,10 +163,10 @@ div.spio-modal-title {
   }
   */
 }
-.wrap.is-shortpixel-settings-page.simple .is-advanced, .wrap.is-shortpixel-settings-page.quick-tour .is-advanced {
+.wrap.is-shortpixel-settings-page.simple .is-advanced, .wrap.is-shortpixel-settings-page.page-quick-tour .is-advanced {
   display: none;
 }
-.wrap.is-shortpixel-settings-page.simple #viewmode-toggle .advanced, .wrap.is-shortpixel-settings-page.quick-tour #viewmode-toggle .advanced {
+.wrap.is-shortpixel-settings-page.simple #viewmode-toggle .advanced, .wrap.is-shortpixel-settings-page.page-quick-tour #viewmode-toggle .advanced {
   display: none;
 }
 .wrap.is-shortpixel-settings-page.advanced #viewmode-toggle .simple {
@@ -199,7 +199,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button:hover, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button i.switch, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting i.switch {
   width: 18px;
@@ -475,7 +475,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page header .top-buttons a:hover, .wrap.is-shortpixel-settings-page header .top-buttons button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page header .top-buttons a i.switch, .wrap.is-shortpixel-settings-page header .top-buttons button i.switch {
   width: 18px;
@@ -1159,7 +1159,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button i.switch {
   width: 18px;
@@ -1931,7 +1931,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-tools .button {
   min-height: 44px;
   color: #1ABDCA;
-  background-color: rgb(232.25, 232.25, 232.25);
+  background-color: #e8e8e8;
   border-radius: 6px;
   font-weight: 700;
   letter-spacing: 0.3px;
@@ -1939,7 +1939,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
   color: #fff;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .option, .wrap.is-shortpixel-settings-page #tab-tools setting {
