--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -25,15 +25,22 @@ i.documentation.down {
 }
 
 div.spio-modal-shade {
-  position: fixed; /* Stay in place */
-  z-index: 10; /* Sit on top - zindex wars  */
+  position: fixed;
+  /* Stay in place */
+  z-index: 10;
+  /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 div.spio-modal {
@@ -44,10 +51,13 @@ div.spio-modal {
   background-position: center;
   padding: 20px 16px 16px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 40%;
+  /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px; /* Could be more or less, depending on screen size */
-  z-index: 100; /* Proper z-index */
+  min-width: 300px;
+  /* Could be more or less, depending on screen size */
+  z-index: 100;
+  /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
@@ -1208,6 +1218,27 @@ div.spio-modal-title {
   flex-direction: row;
   align-items: center;
 }
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line .status-ok, .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line .status-warning {
+  display: none;
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line h4 {
+  font-size: 16px;
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line.ok .mainblock-status {
+  background-image: url("../images/icon/ok.svg");
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line.ok .status-ok {
+  display: block;
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line.warning .mainblock-status {
+  background-image: url("../images/icon/warning.svg");
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line.warning .status-warning {
+  display: block;
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .first-line.warning .cocktail {
+  display: none;
+}
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel .second-line {
   display: flex;
   flex-direction: row;
@@ -1241,11 +1272,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i {
   margin: 0 20px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i.mainblock-status.ok {
-  width: 70px;
-  height: 75px;
-}
-.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i.mainblock-status.alert {
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .first-panel i.mainblock-status {
   width: 70px;
   height: 75px;
 }
