--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -42,7 +42,7 @@ div.spio-modal {
   background-image: url("../img/spinner2.gif");
   background-repeat: no-repeat;
   background-position: center;
-  padding: 20px 16px 8px 16px;
+  padding: 20px 16px 6px 16px;
   border: 1px solid #888;
   width: 40%; /* Could be more or less, depending on screen size */
   max-width: 100%;
@@ -54,6 +54,7 @@ div.spio-modal {
   height: 60%;
   max-height: 90%;
   overflow-y: auto;
+  border-radius: 8px;
 }
 div.spio-modal iframe {
   width: 100%;
