--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -61,7 +61,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -247,7 +247,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button:disabled {
   color: #ccc;
@@ -375,7 +375,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px auto;
@@ -430,7 +430,7 @@
   margin: 0;
   padding: 12px;
   background: #1FB5BF;
-  background: linear-gradient(90deg, #0f6a7d 0%, #0f6a7d 0%, #1cbecb 100%);
+  background: linear-gradient(90deg, #0f6a7d 0%, rgb(15, 106, 125) 0%, #1cbecb 100%);
   width: 100%;
   font-size: 16px;
   color: #ffffff;
@@ -567,7 +567,7 @@
   display: none;
   margin: 25px auto;
   width: 95%;
-  background: #1fbec9;
+  background: rgb(31, 190, 201);
   border: 1px solid #ccc;
   font-size: 26px;
   line-height: 26px;
@@ -579,7 +579,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: #1ca9b3;
+  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -630,7 +630,7 @@
   flex-grow: 1;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.result .line {
-  background: linear-gradient(90deg, #cccccc 0%, #cccccc 49.9%, white 51%, white 100%);
+  background: linear-gradient(90deg, rgb(204, 204, 204) 0%, rgb(204, 204, 204) 49.9%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.select .line {
   width: 50%;
@@ -672,7 +672,7 @@
   margin-top: 8px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .text, .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .step {
   color: #EC2C25;
@@ -812,7 +812,7 @@
   border-color: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .text, .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .step {
   color: #EC2C25;
@@ -954,7 +954,7 @@
   border-color: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .line, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .text, .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .step, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .text, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
   color: #EC2C25;
@@ -1073,8 +1073,8 @@
   position: absolute;
   top: 0;
   width: 300px;
-  background: #0f6a7d50;
-  background: linear-gradient(90deg, #0f6a7d 0%, #0f6a7d 0%, rgba(0, 212, 255, 0) 100%);
+  background: rgba(15, 106, 125, 0.3137254902);
+  background: linear-gradient(90deg, rgb(15, 106, 125) 0%, rgb(15, 106, 125) 0%, rgba(0, 212, 255, 0) 100%);
   color: #fff;
   font-size: 20px;
   padding: 15px;
@@ -1196,7 +1196,7 @@
   border-color: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .text, .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .step {
   color: #EC2C25;
@@ -1216,7 +1216,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: #24d1dd;
+  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
