--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -12,6 +12,7 @@
   @import 'elements/colors';
   @import 'elements/breakpoints';
   @import 'elements/mixins';
+  @import 'elements/animation';
   @import 'view/settings-structure';
   @import 'elements/header';
   @import 'elements/icons';
