--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -233,10 +233,10 @@
 		 padding: 5px;
 		 z-index: 10;
 		 transition: all 1s ease-out;
-		 margin-bottom: -1000px;
+		 margin-bottom: -100px;
 		 &.show {
 			 margin: 0;
-			 transition: all 1s ease-in;
+			 transition: all 200ms ease-in;
 
 		 }
 		.icon-container
