--- a/res/scss/view/_settings-exclusions.scss
+++ b/res/scss/view/_settings-exclusions.scss
@@ -39,9 +39,9 @@
   }
   .grid-thumbnails
   {
-
       column-count: 3;
       column-width: 220px;
+      padding: 5px 10px;
     > span {
        margin-right: 20px;
        white-space:nowrap;
