--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -204,7 +204,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button:hover, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button i.switch, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting i.switch {
   width: 18px;
@@ -307,7 +307,7 @@ div.spio-modal-title {
   filter: brightness(0%) invert(1);
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings section.wrapper .setting-tab .save-buttons.saving button.save {
-  background-color: #0e6870;
+  background-color: rgb(14.3684210526, 104.4473684211, 111.6315789474);
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings section.wrapper .setting-tab .save-buttons.saving button.save i {
   animation: cssload-spin 5000ms infinite linear;
@@ -523,7 +523,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page header .top-buttons a:hover, .wrap.is-shortpixel-settings-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-settings-page header .top-buttons a i.switch, .wrap.is-shortpixel-settings-page header .top-buttons button i.switch {
   width: 18px;
@@ -674,6 +674,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page .shortpixel-illustration.cocktail {
   background-image: url("../images/illustration/cocktail.svg");
   height: 104px;
+  width: 60px;
 }
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression name {
   margin-bottom: 10px;
@@ -994,6 +995,11 @@ div.spio-modal-title {
   height: 36px;
   width: 290px;
 }
+.wrap.is-shortpixel-settings-page section#tab-webp content ul li input {
+  width: 1rem;
+  height: 1rem;
+  opacity: 1;
+}
 .wrap.is-shortpixel-settings-page section#tab-debug h2 {
   left: 738px;
 }
@@ -1204,7 +1210,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button i.switch {
   width: 18px;
@@ -1605,6 +1611,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-exclusions .grid-thumbnails {
   column-count: 3;
   column-width: 220px;
+  padding: 5px 10px;
 }
 .wrap.is-shortpixel-settings-page #tab-exclusions .grid-thumbnails > span {
   margin-right: 20px;
@@ -1993,7 +2000,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-tools .button {
   min-height: 44px;
   color: #1ABDCA;
-  background-color: #e8e8e8;
+  background-color: rgb(232.25, 232.25, 232.25);
   border-radius: 6px;
   font-weight: 700;
   letter-spacing: 0.3px;
@@ -2001,7 +2008,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
   color: #fff;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .option, .wrap.is-shortpixel-settings-page #tab-tools setting {
