--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -330,6 +330,11 @@
 		height: 36px;
 		width: 290px;
 	}
+	content ul li input {
+		width: 1rem;
+		height: 1rem;
+		opacity: 1;
+	}
   }
   section#tab-debug
   {
