--- a/res/scss/view/_settings-structure.scss
+++ b/res/scss/view/_settings-structure.scss
@@ -35,6 +35,11 @@
 			 @include shortpixel-button;
 		}
 
+		// This declaration to prevent issues with other plugins invading our space :/
+		input {
+			opacity: 1;
+		}
+
 
 		.mobile-menu
 		{
