Update wording and CSS in the settings and bulk

--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -8,6 +8,7 @@
 	@import 'elements/colors';
 	@import 'elements/animation';
 	@import 'elements/mixins';
+        @import 'elements/breakpoints';
 	@import 'elements/header';
 	@import 'elements/icons';
 
