--- a/res/scss/elements/_setting.scss
+++ b/res/scss/elements/_setting.scss
@@ -10,6 +10,8 @@ setting{
   width: auto;
   height: auto;
   position: relative;
+  transition: all 0.5s ease-in;
+
   //display: flex;
  // align-items: center;
   //flex-wrap: wrap;
@@ -113,6 +115,7 @@ setting{
   {
      filter: blur(1px);
      opacity: 0.4;
+     transition: all 0.5s ease-out;
   }
 
 } // setting
