--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -445,8 +445,6 @@ body.debug-model-active {
 }
 
 .switch_button, switch {
-  line-height: 12px;
-  margin: 2px -5px 10px -5px;
   display: inline-block;
 }
 .switch_button label, switch label {
@@ -459,11 +457,11 @@ body.debug-model-active {
   display: none;
 }
 .switch_button input[type=checkbox]:checked ~ .the_switch, switch input[type=checkbox]:checked ~ .the_switch {
-  background: #7cdce4;
+  background: #1ABDCA;
 }
 .switch_button input[type=checkbox]:checked ~ .the_switch:after, switch input[type=checkbox]:checked ~ .the_switch:after {
-  left: 20px;
-  background: #1caecb;
+  transform: translateX(19px);
+  background-color: #116C7E;
 }
 .switch_button input[type=checkbox]:disabled ~ .the_switch, switch input[type=checkbox]:disabled ~ .the_switch {
   background: #d5d5d5;
@@ -476,36 +474,28 @@ body.debug-model-active {
   margin: 8px 15px 8px 0;
   position: relative;
   display: inline-block;
-  height: 10px;
+  height: 20px;
   width: 40px;
-  background: #cccccc;
-  border-radius: 100px;
+  background-color: #D7D7D7;
+  border-radius: 30px;
   cursor: pointer;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.25) !important;
+  transition: background-color 0.4s;
 }
 .switch_button .the_switch:after, switch .the_switch:after {
   position: absolute;
-  left: -2px;
-  top: -5px;
-  display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 100px;
-  background: #aaa;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.31);
+  left: 2px;
+  bottom: 2px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #A9A9A9;
+  transition: transform 0.4s;
   content: "";
-  -webkit-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
-  -o-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
-  transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
 }
-.switch_button .the_switch:active:after, switch .the_switch:active:after {
-  transform: scale(0.9, 0.85);
-}
-.switch_button .the_switch:focus, switch .the_switch:focus {
+.switch_button .the_switch:active:after:focus, switch .the_switch:active:after:focus {
   outline: none;
 }
-
-.adv_switch {
+.switch_button .adv_switch, switch .adv_switch {
   position: relative;
   display: inline-block;
   width: 45px;
@@ -513,12 +503,12 @@ body.debug-model-active {
   bottom: 2px;
   left: 20px;
 }
-.adv_switch input {
+.switch_button .adv_switch input, switch .adv_switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
-.adv_switch .adv_slider {
+.switch_button .adv_switch .adv_slider, switch .adv_switch .adv_slider {
   position: absolute;
   cursor: pointer;
   background-color: #D7D7D7;
@@ -529,7 +519,7 @@ body.debug-model-active {
   bottom: 0;
   transition: 0.4s;
 }
-.adv_switch .adv_slider::before {
+.switch_button .adv_switch .adv_slider::before, switch .adv_switch .adv_slider::before {
   position: absolute;
   content: "";
   height: 13px;
@@ -541,7 +531,7 @@ body.debug-model-active {
   transition: 0.4s;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
-.adv_switch .adv_slider::after {
+.switch_button .adv_switch .adv_slider::after, switch .adv_switch .adv_slider::after {
   position: absolute;
   content: "OFF";
   color: white;
@@ -553,14 +543,14 @@ body.debug-model-active {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: bold;
 }
-.adv_switch input:checked + .adv_slider {
+.switch_button .adv_switch input:checked + .adv_slider, switch .adv_switch input:checked + .adv_slider {
   background-color: #00C898;
 }
-.adv_switch input:checked + .adv_slider::before {
+.switch_button .adv_switch input:checked + .adv_slider::before, switch .adv_switch input:checked + .adv_slider::before {
   transform: translateX(26px);
   background-color: #fff;
 }
-.adv_switch input:checked + .adv_slider::after {
+.switch_button .adv_switch input:checked + .adv_slider::after, switch .adv_switch input:checked + .adv_slider::after {
   content: "ON";
   left: 8px;
   right: auto;
