--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -25,7 +25,7 @@
 
 .switch_button, switch
 {
-//	//margin-left: -5px;
+	//margin-left: -5px;
 	//line-height: 12px;
 	//margin: 2px -5px 10px -5px ;
 	display: inline-block;
@@ -78,10 +78,10 @@
 
 			// bouncy effect
 			//-webkit-transition : left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
-//-o-transition      : left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
-//transition         : left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
+			//-o-transition      : left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
+			//transition         : left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
 		}
-		&:active:after { //transform: scale(0.9, 0.85); }
+		&:active:after {} //transform: scale(0.9, 0.85); }
 		&:focus {
 			outline: none;
 		}
@@ -90,7 +90,7 @@
 }
 
 // The advanced switch
-.adv_switch {
+.adv_switch{
   position: relative;
   display: inline-block;
   width: 45px;
@@ -163,4 +163,4 @@
       right: auto;
     }
   }
-}}
+}
