--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -310,6 +310,22 @@
 
   }
 
+  section#tab-optimisation
+  {
+	content.exif-ai img.icon {
+		height: 40px;
+		margin-bottom: -25px;
+		margin-left: 20px;
+
+		@include breakpoint(0, 768px) {
+			height: 25px;
+			float: right;
+			margin-top: -70px;
+			margin-right: -5px;
+		}
+	}
+  }
+
   section#tab-webp
   {
 	img.icon {
