--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -1026,6 +1026,9 @@ div.spio-modal-title {
   height: 1rem;
   opacity: 1;
 }
+.wrap.is-shortpixel-settings-page section#tab-webp img#exifviewer-img-1 {
+  margin-bottom: -7px;
+}
 .wrap.is-shortpixel-settings-page section#tab-debug h2 {
   left: 738px;
 }
@@ -2169,7 +2172,6 @@ div.spio-modal-title {
   opacity: 0;
   transition: opacity 300ms;
   background: #fff;
-  max-width: 700px;
 }
 .wrap.is-shortpixel-settings-page setting warning h4, .wrap.is-shortpixel-settings-page setting error h4 {
   margin: 0;
