--- a/res/scss/view/_settings-onboarding.scss
+++ b/res/scss/view/_settings-onboarding.scss
@@ -23,6 +23,7 @@
 			padding: 12px;
 			margin-top: 30px;
 			border: 1px solid $blue_background;
+			border-radius: 0.7rem;
        			&:first-child {
 				margin-right: 8px;
 			}
